// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[getDotTriples] "
  to simplify things, this
  mini-syntax :: spans
  only one line
  " 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "spans",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "mini-syntax",
    },
  },
]
`;

exports[`[getDotTriples] " something :: points at :: __THIS__" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "__THIS__",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "something :: points at",
    },
  },
]
`;

exports[`[getDotTriples] "__THIS__ :: is a :: note" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "note",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "__THIS__ :: is a",
    },
  },
]
`;

exports[`[getDotTriples] "A :: B :: C :: D" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "D",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "A :: B :: C",
    },
  },
]
`;

exports[`[getDotTriples] "Maria :: climbed :: the tree" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "the tree",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "Maria :: climbed",
    },
  },
]
`;

exports[`[getDotTriples] "arrays :: [banana, apple]" 1`] = `
Array [
  Object {
    "object": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "banana",
        },
        Object {
          "entities": Object {},
          "value": "apple",
        },
      ],
    },
    "predicate": Object {
      "entities": Object {},
      "value": "arrays",
    },
  },
]
`;

exports[`[getDotTriples] "date :: 2022-01-07 15:07" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {
        "dates": Array [
          Object {
            "duration": Object {
              "hours": 8,
              "minutes": 533,
            },
            "end": "2022-01-07T23:59:59.999+01:00",
            "start": "2022-01-07T15:07:00.000+01:00",
            "text": "2022-01-07 15:07",
            "tz": "Europe/Brussels",
            "unit": "time",
          },
        ],
      },
      "value": "2022-01-07 15:07",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "date",
    },
  },
]
`;

exports[`[getDotTriples] "external link :: <http://example.org>" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "<http://example.org>",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "external link",
    },
  },
]
`;

exports[`[getDotTriples] "external link :: http://example.org" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "http://example.org",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "external link",
    },
  },
]
`;

exports[`[getDotTriples] "internal link :: [[link]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {
        "internalLinks": Array [
          "link",
        ],
      },
      "value": "[[link]]",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "internal link",
    },
  },
]
`;

exports[`[getDotTriples] "is a :: [[Editor]], [[Jour]]" 1`] = `
Array [
  Object {
    "object": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "[Editor]]",
        },
        Object {
          "entities": Object {},
          "value": "[[Jour]",
        },
      ],
    },
    "predicate": Object {
      "entities": Object {},
      "value": "is a",
    },
  },
]
`;

exports[`[getDotTriples] "properties :: and values are separated by double colons" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "and values are separated by double colons",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "properties",
    },
  },
]
`;

exports[`[getDotTriples] "subject :: 'Quotes escape :: characters' :: object" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "object",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "subject :: 'Quotes escape :: characters'",
    },
  },
]
`;

exports[`[getDotTriples] "vaccination dates :: 2022-01-07, next week" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {
        "dates": Array [
          Object {
            "duration": Object {},
            "end": null,
            "start": null,
            "text": "2022-01-07, next week",
            "tz": "Europe/Brussels",
            "unit": "time",
          },
        ],
      },
      "value": "2022-01-07, next week",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "vaccination dates",
    },
  },
]
`;
